noinst_LTLIBRARIES = libgoo.la

poppler_goo_includedir = $(includedir)/poppler/goo
poppler_goo_include_HEADERS =			\
	GooHash.h				\
	GooList.h				\
	GooMutex.h				\
	GooString.h				\
	gmem.h					\
	gtypes.h				\
	gmem.h					\
	gfile.h

libgoo_la_SOURCES =				\
	gfile.cc				\
	gmempp.cc				\
	GooHash.cc				\
	GooList.cc				\
	GooString.cc				\
	gmem.c
